--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 .container {
     width            : 100%;
     height           : 100vh;
-    background-color : #12121f;
+
     color            : #eee;
     display          : flex;
     justify-content  : center;
@@ -127,6 +127,83 @@ html {
     border-radius: 0.3rem;
     transition: background-color 0.2s, border-color 0.2s;
 }
+
+.legend ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.legend li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.5rem;
+    font-size: 1.4rem;
+}
+
+.legend li span {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    margin-right: 0.8rem;
+    border-radius: 3px;
+}
+
+/* Availability colors */
+.available {
+    background-color: #6aaa64; /* Green */
+}
+
+.limited {
+    background-color: #f5e271; /* Light Yellow */
+}
+
+.last {
+    background-color: #f28b48; /* Orange */
+}
+
+.full {
+    background-color: #e74c3c; /* Red */
+}
+
+/* Arrival / Departure */
+.arrival,
+.departure {
+    color: #000;
+    background-color: #bdd7f2;
+    border-radius: 3px;
+    width: 20px;
+    height: 20px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 0.8rem;
+    font-family: sans-serif;
+    border: 1px solid #8db3dd;
+    text-transform: uppercase;
+}
+
+.calendar-legend {
+    padding: 1rem 2rem;
+    color: #eee;
+    font-size: 1.4rem;
+
+}
+
+.calendar-legend h3.subtitle {
+    margin-bottom: 0.8rem;
+    font-size: 1.6rem;
+    text-decoration: underline;
+}
+
+.calendar-legend .legend {
+    margin-bottom: 1.5rem;
+}
+
+
+
 
 
 
