--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
 html {
     font-size : 62.5%;
 }
+
+body {
+    background-color: #12121f;
+}
+
 .container {
     width            : 100%;
     height           : 100vh;
@@ -15,6 +20,8 @@ html {
     display          : flex;
     justify-content  : center;
     align-items      : center;
+    flex-direction: column;
+    background-color: #12121f; /* ou le même que .calendar si tu préfères */
 }
 .calendar {
     width            : 45rem;
